...
                    source={require("../assets/images/1-removebg-preview1.png")}
                    resizeMode="contain"
                    style={styles.image}
                />
            </View>
            <View>
                <Dialog.Container visible={dialogVisible} testID={'privacyPolicy'}>
                    <Dialog.Title>Privacy Policy</Dialog.Title>
                    <Dialog.Description>
                            By clicking continue you are verifying that you are above the age of 18 and that you agree to our
                                Terms and Conditions
                                Privacy Policy.
                    </Dialog.Description>
                    <Dialog.Button label="Cancel" onPress={() => setDialogVisible(!dialogVisible)} />
                    <Dialog.Button label="Continue" onPress={() => {
                        setDialogVisible(!dialogVisible);
                        navigation.navigate('Welcome')
                    }
                    } />
                </Dialog.Container>
            </View>
...
                        secureTextEntry={true}
                        textContentType="oneTimeCode"
                        style={styles.passwordInput}
                        onChangeText={(text) => setPassword(text)}
                        value={password}
                        placeholderTextColor="rgba(0,0,0,1)"
                        testID={'password'}
                    />
                </View>
                <TouchableOpacity
                    style={styles.loginContainer}
                    onPress={() => onLoginPress()}
                    testID={'login'}>
                    <Text style={styles.loginText}>Login</Text>
                </TouchableOpacity>
                <TouchableOpacity
                    style={styles.createAccountContainerAndroid}
                    onPress={() => setDialogVisible(!dialogVisible)}
                    testID={'createAccount'}>
                    <Text style={styles.createAccountText}>Create Account</Text>
                </TouchableOpacity>

            </View>
        </View>
    )
...
