...
            }).catch(() => {
                alert('Error retrieving children. Please try again later.');
            });
    }, []);

    // holds child accounts as a state and resets text inputs
    const addStudent = () => {
        const id = '_' + Math.random().toString(36).substr(2, 9);
        if (name.length > 0) { //displayAge is hardcoded to 0 for now
            setChildAccounts(childAccounts.concat({ "displayName": name, "displayAge": 0, "id": id }));
        }

        setName('');
...
                    placeholder="Profile Nickname"
                    placeholderTextColor="rgba(0,0,0,0.75)"
                    secureTextEntry={false}
                    style={styles.usernameInput}
                    onChangeText={text => setName(text)}
                    value={name}
                    testID={'nickname'}
                />
            </View>
            <TouchableOpacity
                onPress={() => addStudent()}
                style={styles.addStudentButton}
                testID={'addStudent'}
...
                />
                <Text style={styles.addAnotherAccount}>Add Profile</Text>
            </TouchableOpacity>
            <TouchableOpacity
                onPress={() => finishSignUp()}
                style={styles.buttonContainer}
                testID={'saveChildAccounts'}
            >
                <Text style={styles.buttonText}>{buttonText}</Text>
            </TouchableOpacity>
        </View>

    );
...
